--- a/thuyhoangadmin/src/components/PantsProduct/PantsProduct.css
+++ b/thuyhoangadmin/src/components/PantsProduct/PantsProduct.css
@@ -84,3 +84,25 @@
     margin-right: 5px;
   }
   
+  .modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 0.3s ease;
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    padding: 30px;
+    border-radius: 12px;
+    width: 500px;
+    max-width: 90%;
+    text-align: center;
+  }
+  
