--- a/thuyhoangadmin/src/Pages/VaiInventoryPage/VaiInventoryPage.css
+++ b/thuyhoangadmin/src/Pages/VaiInventoryPage/VaiInventoryPage.css
@@ -107,6 +107,8 @@
 
   /* src/Pages/VaiInventoryPage/VaiInventoryPage.css */
 
+/* src/Pages/VaiInventoryPage/VaiInventoryPage.css */
+
 /* Modal Styles */
 .modal {
     position: fixed;
